elaborar el formulario

--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
 	<meta charset="utf-8">
 </head>
 <body>
-
+	<div>
+  <button type="button">Acceder al formulario</button>
+   </div> 
+ </br>
+   <div>
+  <label form="text">Fecha de solicitud:</label>
+  <input type="date" id="fecha" placeholder="mm/dd/yyyy">
+   </div>
+  </br>
+   <div>
+   <label form="name">Nombre Completo:</label>
+  <input type="name" id="name" name="user_name"/>
+   </div>
+ </br>
+  <div>
+  	  <label form="text">Fecha de Nacimiento:</label>
+  <input type="date" id="fecha" placeholder="mm/dd/yyyy">
+    </div>
+ </br>
+   <div>
+ <label form="mail">Correo Electronico:</label>
+ <input type="email" id="Confirm_Email" name="user_email"/>
+   </div>
+ </br>
+  <div>
+  	<label form="name">Telefono:</label>
+    <input type="text" id="text" text="name">
+   </div>
+ </br>
+   <div>
+   	     seleccione su sexo
+   	     <input type="radio" name="sexo" value="hombre" checked="checked" /> Hombre
+<input type="radio" name="sexo" value="mujer" /> Mujer
 </body>
 </html>
