--- a/index.html
+++ b/index.html
@@ -84,8 +84,6 @@
   <div>
     <label>Ciudad:</label>
     <select name="ciudad">
-
-
     <option>Seleccionar ciudad</option>
 <option value="2">Acacías</option>
               <option value="3">Acandí</option>
@@ -1004,15 +1002,55 @@
  </br>
    <div>
     <label form="name">Direccion:</label>
-    <input type="text" id="direccion" text="name">
+    <input type="text" id="direccion" text="name" placeholder="cra 22 #22c -22">
    </div>
   </br>
    <div>
     seleccione el tipo de domicilio
-      <input type="radio" name="domicilio" value="
-      <input type="radio" name="domicilio" value=
-      <input type="radio" name="domicilio" value=
+      <input type="radio" name="domicilio" value="casa"/>casa
+      <input type="radio" name="domicilio" value="apartamento"/>apartamento
+      <input type="radio" name="domicilio" value="finca"/>finca
+      <input type="radio" name="domicilio" value="otro"/>otro
    </div>
-
+ </br>
+   <div>
+    <label form="name">Especifique "otro":</label>
+    <input type="text" id="espesifique_otro" text="name">
+   </div> 
+  </br>
+   <div>
+        <label form="name">Numero de integrantes del domicilio:</label>
+    <input type="text" id="numero_de_integrantes" text="name">
+   </div>
+  </br>
+     <div>
+    <label form="name">¿por que quieres adoptar una mascota?:</label>
+    <input type="text" id="mascota" text="name">
+   </div>
+  </br>
+   <div>
+    ¿tienes experiencia con los animales?
+      <input type="radio" name="experiencia" value="si"/>Si
+      <input type="radio" name="experiencia" value="no"/>No
+   </div>
+  </br>
+   <div>
+    ¿tienes otras mascotas?
+      <input type="radio" name="mascota" value="si"/>Si
+      <input type="radio" name="mascota" value="no"/>No
+   </div>
+    <label form="name">¿cuales son tus ingresos mensuales?:</label>
+    <input type="text" id="tiempo" text="name"  placeholder="$500.000">
+   </div>
+  <p>
+   <div>
+    <label form="name">¿cuanto tiempo piensas dedicarle a tu mascota?:</label>
+    <input type="text" id="tiempo" text="name">
+   </div>
+  </br>
+   <div>
+    <label form="name">¿cuantos ingresos dispones para tu mascota?:</label>
+    <input type="text" id="tiempo" text="name"  placeholder="$200.000">
+   </div>
 </body>
 </html>
