--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </br>
    <div>
    <label form="name">Nombre Completo:</label>
-  <input type="name" id="name" name="user_name"/>
+  <input type="name" id="name" name="user_name" placeholder="pepito perez">
    </div>
  </br>
   <div>
@@ -26,12 +26,12 @@
  </br>
    <div>
  <label form="mail">Correo Electronico:</label>
- <input type="email" id="Confirm_Email" name="user_email"/>
+ <input type="email" id="Confirm_Email" name="user_email" placeholder="alguien@gmail.com">
    </div>
  </br>
   <div>
   	<label form="name">Telefono:</label>
-    <input type="text" id="telefono" text="name">
+    <input type="text" id="telefono" text="name" placeholder="5557776">
    </div>
  </br>
    </div>
@@ -1039,18 +1039,33 @@
       <input type="radio" name="mascota" value="si"/>Si
       <input type="radio" name="mascota" value="no"/>No
    </div>
+  </br>
+   <div>
     <label form="name">¿cuales son tus ingresos mensuales?:</label>
     <input type="text" id="tiempo" text="name"  placeholder="$500.000">
-   </div>
-  <p>
-   <div>
-    <label form="name">¿cuanto tiempo piensas dedicarle a tu mascota?:</label>
-    <input type="text" id="tiempo" text="name">
    </div>
   </br>
    <div>
     <label form="name">¿cuantos ingresos dispones para tu mascota?:</label>
     <input type="text" id="tiempo" text="name"  placeholder="$200.000">
    </div>
-</body>
+  </br>
+    <div>
+    <label form="name">¿cuanto tiempo piensas dedicarle a tu mascota?:</label>
+    <input type="text" id="tiempo" text="name">
+   </div>
+  </br>
+      <div>
+    <label form="name">en caso de estar ausente por un tiempo,¿quien cuidara de tu mascota?:</label>
+    <input type="text" id="ausente" text="name">
+   </div>
+  </br>
+    <div>
+  <button type="button">guardar</button>
+   </div> 
+  </br>
+   <iv>
+  <button type="button">boton de respuesta</button>
+   </div> 
+ </body>
 </html>
