--- a/index.html
+++ b/index.html
@@ -13,33 +13,26 @@
  <body>
    <section class="container">
    <div class="fecha">
-  <label form="text">Fecha de solicitud:</label>
-</br>
+  <p>Fecha de solicitud:</p>
   <input type="date" id="fecha" placeholder="mm/dd/yyyy">
    </div>
-  </br>
    <div class="columna">
-   <label form="name">Nombre Completo:</label>
- </br>
-  <input type="name" id="name" name="user_name" placeholder="pepito perez">
+   <p>Nombre Completo:</p>
+  <input class="barra" type="name" id="name" name="user_name" placeholder="pepito perez">
    </div>
   <div class="columna">
-  	<label form="text">Fecha de Nacimiento:</label>
-  </br>
-  <input  type="date" id="nacimiento" placeholder="mm/dd/yyyy">
+  	<p>Fecha de Nacimiento:</p>
+  <input class="barra" type="date" id="nacimiento" placeholder="mm/dd/yyyy">
     </div>
   <div class="columna">
- <label form="mail">Correo Electronico:</label>
-</br>
- <input type="email" id="Confirm_Email" name="user_email" placeholder="alguien@gmail.com">
+ <p form="mail">Correo Electronico:</p>
+ <input class="barra" type="email" id="Confirm_Email" name="user_email" placeholder="alguien@gmail.com">
    </div>
   <div class="columna">
-  <label form="name">Telefono:</label>
-  </br>
-  <input type="text" id="telefono" text="name" placeholder="5557776">
+  <p>Telefono:</p>
+  <input class="barra" type="text" id="telefono" text="name" placeholder="5557776">
   </div>
- </br>
-   <div class="columna">
+   <div class="seleccion">
    	     seleccione su sexo
    	     <input type="radio" name="sexo" value="hombre" /> Masculino
          <input type="radio" name="sexo" value="mujer" /> Femenino
@@ -47,9 +40,8 @@
     </div>
   <p>
   <div class="columna">
-    <label>Departamento:</label>
-  </br>
-    <select name="departamento">
+    <p>Departamento:</p>
+    <select class="barra2" name="departamento">
     <option>Seleccionar departamento</option>
     <option>Antioquia</option>  
     <option>Amazonas</option> 
@@ -87,9 +79,8 @@
  </select>
   </div>
   <div class="columna">
-    <label>Ciudad:</label>
-  </br>
-    <select name="ciudad">
+    <p>Ciudad:</p>
+    <select class="barra2" name="ciudad">
     <option>Seleccionar ciudad</option>
 <option value="2">Acacías</option>
               <option value="3">Acandí</option>
@@ -1006,61 +997,53 @@
   </select>
    </div>
   <div class="columna">
-    <label form="name">Direccion:</label>
-  </br>
-    <input type="text" id="direccion" text="name" placeholder="cra 22 #22c -22">
-  <div class="columna">
+    <p>Direccion:</p>
+    <input class="barra" type="text" id="direccion" text="name" placeholder="cra 22 #22c -22">
+  </div>
+  <div class="seleccion">
     seleccione el tipo de domicilio
       <input type="radio" name="domicilio" value="casa"/>casa
       <input type="radio" name="domicilio" value="apartamento"/>apartamento
       <input type="radio" name="domicilio" value="finca"/>finca
       <input type="radio" name="domicilio" value="otro"/>otro
    </div>
-  <div class="columna">
-    <label form="name">Especifique "otro":</label>
-  </br>
-    <input type="text" id="espesifique_otro" text="name">
+  <div class="seleccion">
+    <p>Especifique "otro":</p>
+    <input class="barra" type="text" id="otro" text="name">
    </div> 
   <div class="columna">
-    <label form="name">Numero de integrantes del domicilio:</label>
-  </br>
-    <input type="text" id="numero_de_integrantes" text="name">
+    <p>Numero de integrantes del domicilio:</p>
+    <input class="barra" type="text" id="numero_de_integrantes" text="name">
    </div>
   <div class="columna">
-    <label form="name">¿por que quieres adoptar una mascota?:</label>
-  </br>
-    <input type="text" id="mascota" text="name">
+    <p>¿por que quieres adoptar una mascota?:</p>
+    <input  class="barra"type="text" id="mascota" text="name">
    </div>
   <div class="columna">
     ¿tienes experiencia con los animales?
       <input type="radio" name="experiencia" value="si"/>Si
       <input type="radio" name="experiencia" value="no"/>No
    </div>
-  </br>
   <div class="columna">
     ¿tienes otras mascotas?
       <input type="radio" name="mascota" value="si"/>Si
       <input type="radio" name="mascota" value="no"/>No
    </div>
   <div class="columna">
-    <label form="name">¿cuales son tus ingresos mensuales?:</label>
-  </br>
-    <input type="text" id="tiempo" text="name"  placeholder="$500.000">
+    <p>¿cuales son tus ingresos mensuales?:</p>
+    <input class="barra" type="text" id="tiempo" text="name"  placeholder="$500.000">
    </div>
   <div class="columna">
-    <label form="name">¿cuantos ingresos dispones para tu mascota?:</label>
-  </br>
-    <input type="text" id="tiempo" text="name"  placeholder="$200.000">
+    <p>¿cuantos ingresos dispones para tu mascota?:</p>
+    <input class="barra" type="text" id="tiempo" text="name"  placeholder="$200.000">
    </div>
   <div class="columna">
-    <label form="name">¿cuanto tiempo piensas dedicarle a tu mascota?:</label>
-  </br>
-    <input type="text" id="tiempo" text="name">
+    <p>¿cuanto tiempo piensas dedicarle a tu mascota?:</p>
+    <input class="barra" type="text" id="tiempo" text="name">
    </div>
   <div class="columna">
-    <label form="name">en caso de estar ausente por un tiempo,¿quien cuidara de tu mascota?:</label>
-  </br>
-    <input type="text" id="ausente" text="name">
+    <p>en caso de estar ausente por un tiempo,¿quien cuidara de tu mascota?:</p>
+    <input class="barra" type="text" id="ausente" text="name">
    </div>
   <div>
   <button type="button">guardar</button>
